// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the button component should render correctly 1`] = `
<DocumentFragment>
  <button
    data-testid="test-btn"
  >
    Test text
  </button>
</DocumentFragment>
`;

exports[`the button component should render correctly as rectangle button 1`] = `
<DocumentFragment>
  <button
    data-testid="test-btn"
  >
    Test text
  </button>
</DocumentFragment>
`;

exports[`the button component should render correctly as round button 1`] = `
<DocumentFragment>
  <button
    data-testid="test-btn"
    style="border-radius: 50%;"
  >
    Test text
  </button>
</DocumentFragment>
`;
